Fix iframe content not being scrollable on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -393,6 +393,7 @@
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
+    -webkit-overflow-scrolling: touch;
     overflow-x: auto;
   }
 
